# airpet

./: .gitignore  Dockerfile  LICENSE  MULTISTEP_EXAMPLE.md  README.md  TASKS.md  TESTS.md  ai_debug_payload.json  app.py  requirements.txt  setup_conda_env.sh  test_ai_assistant_fixes.py  test_boolean_solids.py  test_complex_solids.py  test_multistep_detector.py  test_multistep_quick.py  test_trap_simple.py  test_wizard.py
benchmarks/: README.md
docs/: ADVANCED_SCORING_AND_RUN_CONTROLS_TRACKER.md  AI_BACKEND_ADAPTER_CONTRACT.md  AI_BACKEND_CAPABILITY_MATRIX.json  AI_GDML_HARDENING_TRACKER.md  AI_GDML_REFINEMENTS_TRACKER.md  AI_MULTIMODAL_ARTIFACT_INTAKE.md  CAD_INTEROPERABILITY_REFINEMENT_TRACKER.md  DETECTOR_FEATURE_GENERATORS_TRACKER.md  DETECTOR_GENERATOR_STABILIZATION_TRACKER.md  M5_3_DECISION_CHECKLIST.md  M5_3_DECISION_MEMO.md  M6_USER_READINESS_PLAN.md  PARAM_STUDIES_FIRST_RUN_SILICON.md  PHASE3_GITHUB_PLAN.md  PHASE3_M1_VALIDATION_CHECKLIST.md  PHASE3_PRD.md  PHYSICS_ENVIRONMENT_REFINEMENT_CONTEXT.md  PHYSICS_ENVIRONMENT_REFINEMENT_TRACKER.md  POST_WORKFLOW_REFINEMENT_ROADMAP.md  PREFLIGHT_SCOPED_DIAGNOSTICS.md  RELEASE_AUDIT_GDML_AI.md  SMART_IMPORT_FALLBACK_POLICY.md  WORKFLOW_REFINEMENT_TRACKER.md
examples/: analyze_hits.py
geant4/: CMakeLists.txt  main.cc  manual_build.sh
geant4/include/: ActionInitialization.hh  AirPetHit.hh  AirPetHitsCollection.hh  AirPetSensitiveDetector.hh  AirPetTrajectory.hh  AirPetUserTrackInformation.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
geant4/macros/: gui.mac  init_vis.mac  test.mac  vis.mac
geant4/src/: ActionInitialization.cc  AirPetHit.cc  AirPetSensitiveDetector.cc  AirPetTrajectory.cc  AirPetUserTrackInformation.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
prompts/: ai_system_prompt.md
scripts/: benchmark_smart_import.py  check_benchmark_thresholds.py  create_silicon_slab_v1_project.py  create_silicon_slab_v2_project.py  create_silicon_slab_v3_project.py  create_silicon_slab_v3b_project.py  create_test_project.py  (+8 more)
(+185 files in other folders)
